--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "python.pythonPath": "C:\\Users\\benj2\\Anaconda3\\python.exe"
+    "python.pythonPath": "C:\\Users\\benj2\\Anaconda3\\python.exe",
+    "python.linting.pylintEnabled": false,
+    "python.linting.enabled": true,
+    "python.linting.pep8Enabled": true
 }
