--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
-    "python.pythonPath": "C:\\Users\\benj2\\Anaconda3\\python.exe",
-    "python.linting.pylintEnabled": false,
+    "python.pythonPath": "C:\\Users\\ltray\\AppData\\Local\\Programs\\Python\\Python36-32\\python.exe",
+    "python.linting.pylintEnabled": true,
     "python.linting.enabled": true,
-    "python.linting.pep8Enabled": true
+    "python.linting.pep8Enabled": false
 }
